# sft-medical

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py
app/core/: logger.py
app/sft/: inference.py  publish.py  test.py  train.py
app/unsloth-sft/: inference.py  publish.py  test.py  train.py
app/unsloth-sft/metrics/: results.json
