[project]
name = "qwen-sft-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "huggingface-hub>=1.4.1",
    "loguru>=0.7.3",
    "peft>=0.18.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "setuptools<70",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "trl==0.12.0",
]
