[project]
name = "qwen-sft-medical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bert-score>=0.3.13",
    "bitsandbytes>=0.49.1",
    "datasets>=4.5.0",
    "evaluate>=0.4.6",
    "huggingface-hub>=1.4.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "setuptools<70",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "transformers>=5.1.0",
    "trl==0.12.0",
]
